# bose_soundtouchlib_qt

./: .gitignore  CMakeLists.txt  alert_daemon_debug.ini  copyToRaspi  crossCompileToolchainFile.cmake  makeNative  makeRaspi  qtzeroconf.pro  raspi.cmd  soundtouch_qt.pro  soundtouch_qt_lib.pro
alert_daemon/: AlertConfig.cpp  AlertConfig.hpp  CMakeLists.txt  main.cpp  main.hpp
alert_daemon/config/: AppConfigClass.cpp  AppConfigClass.hpp  CurrBuildDef.hpp  DaemonConfig.cpp  DaemonConfig.hpp  ProjectConst.cpp  ProjectConst.hpp  alertconfig.cpp  alertconfig.hpp  common_def.cpp  common_def.hpp  programconfig.cpp  programconfig.hpp  soundtouchdevice.cpp  soundtouchdevice.hpp
alert_daemon/daemon/: BoseCommServer.cpp  BoseCommServer.hpp  CommandGetHandler.cpp  CommandGetHandler.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  bosecommserver.cpp  bosecommserver.hpp  bosesoundalert.cpp  bosesoundalert.hpp  commandgethandler.cpp  commandgethandler.hpp  commandsethandler.cpp  commandsethandler.hpp  common_def.hpp  connectionhandler.cpp  connectionhandler.hpp  daemontimer.cpp  daemontimer.hpp
alert_daemon/discover/: soundtouchdiscover.cpp  soundtouchdiscover.hpp
alert_daemon/logging/: Logger.cpp  Logger.hpp  logger.cpp  logger.hpp
alert_daemon/rplib/: alert_daemon_debug.ini
alert_daemon/support/: nologgerexception.hpp
commserver/: CMakeLists.txt  main.hpp
commserver/commserver/: BoseCommServer.cpp  BoseCommServer.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp
commserver/config/: AppConfigClass.cpp  DaemonConfig.cpp  DaemonConfig.hpp  programconfig.cpp  programconfig.hpp
commserver/logging/: Logger.cpp  Logger.hpp
discover/: CMakeLists.txt  main.cpp  soundtouchdiscover.cpp  soundtouchdiscover.hpp
doc/: Radiowecker.pap
lib/debug/: liblibsoundtouch_qt.so.1  liblibsoundtouch_qt.so.1.0.0
libsoundtouch/: .gitignore  CMakeLists.txt  Libsoundtouch.cpp  Libsoundtouch.hpp  bsoundtouchdevice.cpp  bsoundtouchdevice.hpp  libsoundtouch_global.hpp  soundtouch_qt_lib.pro
libsoundtouch/websocket/: bwebsocket.cpp  bwebsocket.hpp
libsoundtouch/xmlparser/: bsoundtouch_global.cpp  bsoundtouch_global.hpp  iresponseobject.cpp  iresponseobject.hpp  xmlresultparser.cpp  xmlresultparser.hpp  xmlupdateparser.cpp  xmlupdateparser.hpp
libsoundtouch/xmlparser/httpresponse/: httpbasscapabilitiesobject.cpp  httpbasscapabilitiesobject.hpp  httpbassobject.cpp  httpbassobject.hpp  httpdeviceinfoobject.cpp  httpdeviceinfoobject.hpp  httpgroupobject.cpp  httpgroupobject.hpp  httpnowplayingobject.cpp  httpnowplayingobject.hpp  httppresetsobject.cpp  httppresetsobject.hpp  httpresulterrorobject.cpp  httpresulterrorobject.hpp  httpresultokobject.cpp  httpresultokobject.hpp  httpsourcesobject.cpp  httpsourcesobject.hpp  httpvolumeobject.cpp  httpvolumeobject.hpp  httpzoneobject.cpp  httpzoneobject.hpp
libsoundtouch/xmlparser/wscallback/: wsaudioproductlevelcontrols.cpp  wsaudioproductlevelcontrols.hpp  wsaudioproducttonecontrols.cpp  wsaudioproducttonecontrols.hpp  wsaudiospcontrols.cpp  wsaudiospcontrols.hpp  wsbassupdated.cpp  wsbassupdated.hpp  wsbrowseupdated.cpp  wsbrowseupdated.hpp  wsconnectionstateupdated.cpp  wsconnectionstateupdated.hpp  wserrorupdated.cpp  wserrorupdated.hpp  wsgroupupdated.cpp  wsinfoupdated.cpp  wsinfoupdated.hpp  wslanguageupdated.cpp  wslanguageupdated.hpp  wsnameupdated.cpp  wsnameupdated.hpp  wsnowselectionupdated.cpp  wsnowselectionupdated.hpp  wspresetupdateobject.cpp  wspresetupdateobject.hpp  wsrecentsupdated.cpp  wsrecentsupdated.hpp  wssoundtouchsdkinfo.cpp  wssoundtouchsdkinfo.hpp  wssourceupdated.cpp  wssourceupdated.hpp  wsuseractivityupdated.cpp  wsuseractivityupdated.hpp  wsuserinactivityupdated.cpp  wsuserinactivityupdated.hpp  wsvolumeupdated.cpp  wsvolumeupdated.hpp  wszoneupdated.cpp  wszoneupdated.hpp
libsrc/: bsoundtouchdevice.cpp  bsoundtouchdevice.hpp  soundtouch_qt_lib.pro
libsrc/logging/: Logger.cpp  Logger.hpp
libsrc/websocket/: bwebsocket.cpp  bwebsocket.hpp
libsrc/xmlparser/: basscapabilitiesobject.hpp  bsoundtouch_global.cpp  bsoundtouch_global.hpp  deviceinfoobject.hpp  groupobject.cpp  groupobject.hpp  httpbasscapabilitiesobject.cpp  httpbasscapabilitiesobject.hpp  httpbassobject.cpp  httpbassobject.hpp  httpdeviceinfoobject.cpp  httpdeviceinfoobject.hpp  httpgroupobject.cpp  httpgroupobject.hpp  httpnowplayingobject.cpp  httpnowplayingobject.hpp  httppresetsobject.cpp  httppresetsobject.hpp  httpresulterrorobject.cpp  httpresulterrorobject.hpp  httpresultokobject.cpp  httpresultokobject.hpp  httpsourcesobject.cpp  httpsourcesobject.hpp  httpvolumeobject.cpp  httpvolumeobject.hpp  httpzoneobject.cpp  httpzoneobject.hpp  iresponseobject.cpp  iresponseobject.hpp  nowplayingobject.cpp  nowplayingobject.hpp  presetsobject.hpp  resulterrorobject.hpp  resultokobject.hpp  soundtouch_response.hpp  sourcesobject.cpp  sourcesobject.hpp  volumeobject.cpp  wsaudioproductlevelcontrols.cpp  (+45 more)
src/: bsoundtouchdevice.cpp  bsoundtouchdevice.hpp  bsoundtouchdevice_lib.hpp  librarytestwindow.cpp  librarytestwindow.hpp  main.cpp
src/config/: programconfig.cpp  programconfig.hpp
src/global/: bsoundtouch_global.hpp
src/xmlparser/: basscapabilities.cpp  basscapabilities.hpp  basscapabilitiesobject.cpp  basscapabilitiesobject.hpp  bassobject.cpp  bassobject.hpp  bsoundtouch_global.hpp  deviceinfoobject.cpp  deviceinfoobject.hpp  groupobject.cpp  groupobject.hpp  iresponseobject.cpp  iresponseobject.hpp  nowplayingobject.cpp  nowplayingobject.hpp  presetsobject.cpp  presetsobject.hpp  resulterrorobject.cpp  resulterrorobject.hpp  resultokobject.cpp  resultokobject.hpp  sourcesobject.cpp  sourcesobject.hpp  volumeobject.cpp  volumeobject.hpp  xmlresultparser.cpp  xmlresultparser.hpp  (+2 more)
test_soundtouch/: .gitignore  CMakeLists.txt  librarytestwindow.cpp  librarytestwindow.hpp  main.cpp  soundtouch_qt.pro  soundtouch_qt_test.pro
test_soundtouch/config/: programconfig.cpp  programconfig.hpp
testclient/: CMakeLists.txt  main.cpp  main.hpp  testclient.cpp  testclient.hpp
testsrc/: librarytestwindow.hpp  soundtouch_qt.pro
ui/: librarytestwindow.ui
(+55 files in other folders)
